# Kamel

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
docs/: index.html
src/ui/: App.tsx  main.tsx
toplevel/: dune-project  readme.md  toplevel.opam
toplevel/_build/: .copy-db  .db  .digest-db  log
toplevel/_build/default/: toplevel.dune-package  toplevel.install
toplevel/_build/default/.dune/: configurator  configurator.v2
toplevel/_build/default/.js/default/compiler-libs.bytecomp/: ocamlbytecomp.cma.js
toplevel/_build/default/.js/default/compiler-libs.toplevel/: ocamltoplevel.cma.js
toplevel/_build/default/.js/default/js_of_ocaml/: js_of_ocaml.cma.js
toplevel/_build/default/.js/default/js_of_ocaml-compiler.dynlink/: js_of_ocaml_compiler_dynlink.cma.js
toplevel/_build/default/.js/default/js_of_ocaml-compiler.runtime/: jsoo_runtime.cma.js
toplevel/_build/default/.js/default/js_of_ocaml-ppx/: ppx_js_rewriter.cma.js
toplevel/_build/default/.js/default/js_of_ocaml-ppx.as-lib/: ppx_js.cma.js
toplevel/_build/default/.js/default/js_of_ocaml-toplevel/: js_of_ocaml_toplevel.cma.js
toplevel/_build/default/.js/default/js_of_ocaml.deriving/: js_of_ocaml_deriving.cma.js
toplevel/_build/default/.js/default/menhirLib/: menhirLib.cma.js
toplevel/_build/default/.ppx/7b799aed44581cc79b02033532c5f775/: dune__exe___ppx.cmo  dune__exe___ppx.cmx
toplevel/_build/default/lib/: toplevel.cma  toplevel.cmxa  toplevel.cmxs
toplevel/_build/default/lib/.merlin-conf/: lib-toplevel
(+152 files in other folders)
